@@ -1,3 +1,7 @@
+2005-06-06  Dan Winship  <danw@novell.com>
+
+	* en/Gdk/PangoRenderer.xml: update return type of GetDefault
+
 2005-06-01  Dan Winship  <danw@novell.com>
 
 	* en/GLib/Value.xml: document the new string[] methods (and all of
